# nusaLaunchd

./: .gitignore  Cargo.toml  Dockerfile.test  LICENSE  README.md  build.sh
configs/examples/: long_running.toml  multi_process.toml  simple.toml  web_server.toml
src/: main.rs
src/cli/: args.rs  mod.rs
src/event/: dispatcher.rs  mod.rs
src/job/: config.rs  manager.rs  mod.rs  supervisor.rs  validator.rs
src/process/: mod.rs  monitor.rs  spawner.rs
src/util/: erorr.rs  mod.rs
tests/: job_config_test.rs
tests/integration/: job_test.rs
tests/unit/: config_test.rs
tools/nusaload/: Cargo.toml
tools/nusaload/src/: main.rs
