[package]
name = "nusalaunchd"
version = "0.1.0"
edition = "2021"
authors = ["NusaLaunchd Team"]
description = "A launchd-style init system for Linux"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[dependencies]
# Config parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Async runtime (MINIMAL setup)
tokio = { version = "1.0", features = ["rt", "macros", "signal", "process"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = "0.4"

[dev-dependencies]
tempfile = "3.6"
assert_cmd = "2.0"
predicates = "3.0"