[package]
name = "nusalaunchd"
version = "0.2.0"
edition = "2021"
authors = ["NusaLaunchd Team"]
description = "A launchd-style init system for Linux"
readme = "README.md"
repository = "https://github.com/nusalaunchd/nusalaunchd"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
# Core dependencies
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "signal", "process", "time", "sync"] }

# Command line parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System interaction
nix = "0.27"
libc = "0.2"

# Utilities
chrono = "0.4"
regex = "1.9"
lazy_static = "1.4"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
tempfile = "3.6"
assert_cmd = "2.0"
predicates = "3.0"
wait-timeout = "0.2"
rstest = "0.18"

[[bin]]
name = "nusalaunchd"
path = "src/main.rs"

[[bin]]
name = "nusaload"
path = "tools/nusaload/src/main.rs"
test = false